crates/compact-tree-sitter/test/corpus/pragma-and-include.txt
================================================================================
pragma with a lower bound
================================================================================

pragma language_version >= 0.23.0;

--------------------------------------------------------------------------------

(source_file
  (pragma_declaration
    name: (identifier)
    (version_constraint)))

================================================================================
pragma with alternative versions
================================================================================

pragma language_version 0.16 || 0.17;

--------------------------------------------------------------------------------

(source_file
  (pragma_declaration
    name: (identifier)
    (version_constraint)))

================================================================================
include
================================================================================

include "./shared";

--------------------------------------------------------------------------------

(source_file
  (include_declaration
    path: (string)))
