crates/compact-tree-sitter/test/corpus/structs-enums-contracts.txt
================================================================================
struct
================================================================================

struct Val {
  a: Field;
  b: Boolean;
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    name: (identifier)
    body: (block)))

================================================================================
exported struct with a trailing semicolon
================================================================================

export struct Ciphertext {
  c1: CurvePoint,
  c2: CurvePoint,
};

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    name: (identifier)
    body: (block)))

================================================================================
generic struct
================================================================================

export struct Box<T> {
  value: T;
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    name: (identifier)
    (generic_parameters
      (generic_parameter
        name: (identifier)))
    body: (block)))

================================================================================
enum
================================================================================

enum Color { red, white, blue }

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    body: (block)))

================================================================================
exported enum with a trailing semicolon
================================================================================

export enum ProposalStatus { Pending, Approved, Rejected, };

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    body: (block)))

================================================================================
external contract declaration
================================================================================

export contract Token {
  circuit balanceOf(owner: Bytes<32>): Uint<128>;
  pure circuit name(): Opaque<"string">;
};

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (block
      (string))))

================================================================================
contract implements
================================================================================

contract implements Token;

--------------------------------------------------------------------------------

(source_file
  (implements_declaration
    (type_expression
      (identifier))))
